docs: fix npm/github links alignment

--- a/docs/src/css/_entries/00.css
+++ b/docs/src/css/_entries/00.css
@@ -29,6 +29,8 @@ body {
   line-height: 1.618;
 }
 
+a { display: inline-flex }
+
 :any-link {
   color: var(--link-color);
 }
